--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro"
-import ImageCard from '../components/ImageCard.astro'
+import TaskList from '../components/TaskList.astro'
 ---
 
 <Layout title="Page">
-  <ImageCard id="1"/>
+  <TaskList />
 </Layout>
