--- a/src/components/ImageCard.astro
+++ b/src/components/ImageCard.astro
@@ -10,28 +10,67 @@ const alts: Record<string, string> = {
   2: 'Segunda imagen',
   3: 'Tercera imagen'
 }
-
 const titles: Record<string, string> = {
   1: 'Golden hour',
   2: 'Colores',
   3: 'Paisaje'
 }
 
-const alt = alts[id]
-const title = titles[id]
 ---
+<script src="../scripts/todoListScript.ts"></script>
 <section class="card">
-  <h1 class="title">{title}</h1>
-  <div class="image-container">
-    <a href={(parseInt(id, 10) - 1).toString()} class="next">&lt;</a>
-    <img class="image" src={`${id}.jpg`} alt={alt}>
-    <a href={(parseInt(id, 10) + 1).toString()} class="next">&gt;</a>
+  <h1>Todos</h1>
+  <div class="list">
+    <ul>
+      <li><input type="text" class="add-todos"></li>
+      <li>Task 1</li>
+      <li>Task 2</li>
+      <div class="bottom-list">
+        <h6 id="items-left">3 items leftt</h6>
+        <button class="" name="button-all" type="button">All</button>
+        <button class="" name="button-active" "button">Active</button>
+        <button class="" name="button-completed" type="button">Completed</button>
+        <button class="" name="button-clear-completed" type="button">Clear completed</button>
+      </div>
+    </ul>
+    
   </div>
 </section>
 
-<script>
-  const imagen = document.querySelector('.image')
-  imagen.addEventListener('click', () => {
-    alert('Click')
-  })
-</script>
+<style>
+section{
+  width: 800px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(228, 176, 176);
+}
+.add-todos{
+  /* visibility: hidden; */
+}
+
+.bottom-list{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  padding: 2%;
+  /* margin: 2%; */
+  font-size: 0.9rem;
+}
+
+.card{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+button {
+  margin: 0 4px;
+}
+
+</style>
+
+<!-- 
+  TODO
+  -add items as components 
+  -abm of items to list
+-->
